[gd_scene load_steps=2 format=3 uid="uid://4xm567g2cjnt"]

[ext_resource type="Script" path="res://src/ui/options_menu/logging_menu/logging_menu_controller.gd" id="1_d717i"]

[node name="LoggingMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d717i")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.1
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Logs:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.1
anchor_right = 0.975
anchor_bottom = 0.9

[node name="LogsContainer" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 30

[node name="BaseLogLabel" type="Label" parent="ScrollContainer/LogsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "[00:00:00] Write log message here..."
autowrap_mode = 3

[node name="CloseMenuButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.925
anchor_right = 0.75
anchor_bottom = 0.975
theme_override_font_sizes/font_size = 30
text = "Close"
